tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_type_mismatch_deci_to_deci32.fg
/; EXPECT_ERROR: AssignmentExpressionTypeMismatch
var x:deci32 = 1.5f
x = 2.5

